# ImageExplorer

./: .dockerignore  .gitignore  Dockerfile.backend  README.md
.github/workflows/: main.yml
backend/: README.md  main.py  pyproject.toml  test_main.py  watcher.py
backend/database/: database.py  models.py  utils.py
backend/indexer/: __init__.py  clip_embed.py  data.json  genai_api.py  genai_prompt.txt  text_embed.py  vector_db.py
backend/router/: file_api.py  image_api.py  sqlite_api.py  vector_db_api.py  watcher_api.py  watcher_sse.py  ws_router.py
backend/tests/: conftest.py  constants.py  test_db.py  test_genai.py  test_query.py  test_watcher.py  test_watcher_api.py  test_watcher_sse.py  utils.py
backend/watcher/: __init__.py  watchdogService.py
frontend/: nuxt.config.js  package-lock.json  package.json
frontend-react/: package-lock.json  package.json
frontend-react/app/: app.css  appbar.tsx  images.tsx  modal.tsx
frontend-react/app/routes/: home.tsx
frontend-react/electron/: main.cjs  preload.cjs
frontend/electron/: main.js
frontend/src/: App.vue  groupImages.js  main.js  watcher.js
frontend/src/assets/: main.css
