[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.20.0",
    "model2vec>=0.6.0",
    "numpy>=2.3.0",
    "open-clip-torch>=2.32.0",
    "pymilvus[model]>=2.5.11",
    "sqlmodel>=0.0.24",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "watchdog>=6.0.0",
]
